[project]
name = 'cjn_PiTools'
version = "1.0.1"
    # 1.0.1 - PiOLED startup display file access check debug
    # 1.0 - New.  Bundled PiBlinky, PiOLED, initW1buses, and DS18B20 modules
description = "cjn's library of Raspberry Pi functions, drivers, tools, ..."
readme = "README.md"
requires-python = ">=3.9"
authors = [ {name = "Chris Nelson", email = "github@cjnaz.com"} ]
license = "MIT"
dependencies = [
    'cjnfuncs >= 3.1.1',
    'luma.oled',
    'pillow',
    'spidev',
    'RPi.GPIO',
    ]
keywords = ['cjnaz', 'cjnfuncs', 'Raspberry', 'Raspberry Pi', 'RPi', 
    'DS18B20', 
    'luma.oled', 'OLED',
    'LED', 'blinky',
    ]
classifiers = [                 # https://pypi.org/classifiers/
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]


[project.optional-dependencies]
pigpio = [
    "pigpio",
    ]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
PiOLED =        'cjn_PiTools.PiOLED:cli'
DS18B20 =       'cjn_PiTools.DS18B20:cli'
initW1buses =   'cjn_PiTools.initW1buses:cli'


[project.urls]
repository = "https://github.com/cjnaz/cjn_PiTools"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
'*' = ['fonts/*', 'deployment_files/*']