[project]
name = 'cjn_PiTools'
version = "1.2.1rc2"
    # 1.2.1
    #   ADC121C read_conversion_result force_address switch added
    #   PiOLED tweaks
    #   HTU21D init changed do_soft_reset > do_reset, consistent with SHT3x
    # 1.2 release
    #   PiOLED uses shared memory, changed from display_file - cjnfuncs 3.2 dependency
    #   PiOLED add toolname to pioled_display_driver pioled_shm_lock and pioled_go_flag .get_lock() calls
    #   PiOLED taillog command
    #   Debug logging of MCP23008 set_register() and set_bits() values
    #   doc fixes
    # 1.1.1 - pyproject.toml cleanup, Added to keywords
    # 1.1 - Final cleanup, release
    # 1.0.1 - PiOLED startup display file access check debug
    # 1.0 - New.  Bundled PiBlinky, PiOLED, initW1buses, and DS18B20 modules

description = "cjn's library of Raspberry Pi functions, drivers, tools, ..."
readme = "README.md"
requires-python = ">=3.9"
authors = [ {name = "Chris Nelson", email = "github@cjnaz.com"} ]
license = "MIT"
dependencies = [
    'cjnfuncs >= 3.2',
    'luma.oled',
    'pillow',
    'spidev',
    'smbus2',
    'RPi.GPIO',
    ]
keywords = ['cjnaz', 'cjnfuncs', 'Raspberry', 'Raspberry Pi', 'RPi', 
    'luma', 'luma.oled', 'OLED',
    'LED', 'blinky',
    'DS18B20', 'w1_therm',
    'ADC', 'ADC121C', 'ADC101C', 'ADC081C',
    'HTU21D',
    'MCP23008',
    'PCA9548', 'TCA9548', 'PCA9548A', 'TCA9548A', 
    'SHT3', 'SHT30', 'SHT31', 'SHT35'
    ]
classifiers = [                 # https://pypi.org/classifiers/
    "Topic :: Software Development :: Libraries :: Python Modules",
    ]


[project.optional-dependencies]
pigpio = [
    "pigpio",
    ]


[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.scripts]
PiOLED =        'cjn_PiTools.PiOLED:cli'
DS18B20 =       'cjn_PiTools.DS18B20:cli'
initW1buses =   'cjn_PiTools.initW1buses:cli'
PCA9548 =       'cjn_PiTools.PCA9548:cli'


[project.urls]
repository = "https://github.com/cjnaz/cjn_PiTools"


[tool.setuptools.packages.find]
where = ["src"]


[tool.setuptools]
include-package-data = true


[tool.setuptools.package-data]
'*' = ['fonts/*', 'deployment_files/*']